--- a/src/app/teamplayer/teamplayer.scss
+++ b/src/app/teamplayer/teamplayer.scss
@@ -10,35 +10,51 @@ $topBall14: calc(6209px - $teamplayerTop );
     box-sizing: border-box;
     max-width: 1440px;
     width: 100%;
-    height: 532px;
-    top: 4826px;
+    height: $teamplayerHeight;
+    top: $teamplayerTop;
     color: white;
     background: linear-gradient(128.94deg,
             #5988FF -33.96%, #5988FF 36.71%, #0043F0 112.25%);
 
-    >.title {
-        //border: 1px solid yellow;
-        position: absolute;
-        top: 47px;
-        left: 517px;
-        font-family: 'Baloo2', sans-serif;
-        font-weight: 750;
-        font-size: 45px;
-        line-height: 141%;
-        text-align: center;
-    }
+    >.teamPlayerHeader {
+        $teamplayerTitleTop: 47px;
+        $teamplayerTitleHeight: 63px;
+        $teamplayerDescriptionTop: 110px;
+        $teamplayerDescriptionHeight: 45px;
 
-    >.description {
-        //border: 1px solid greenyellow;
+        //border: 1px solid red;
         position: absolute;
-        top: 110px;
-        left: 398px;
-        font-family: 'Montserrat', sans-serif;
-        font-weight: 400;
-        font-style: normal;
-        font-size: 32px;
-        line-height: 141%;
-        text-align: center;
+        box-sizing: border-box;
+        top: $teamplayerTitleTop;
+        width: 100%;
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        >.title {
+            //border: 1px solid yellow;
+            position: absolute;
+            height: $teamplayerTitleHeight;
+            font-family: 'Baloo2', sans-serif;
+            font-weight: 750;
+            font-size: 45px;
+            line-height: 141%;
+            text-align: center;
+        }
+
+        >.description {
+            //border: 1px solid greenyellow;
+            position: absolute;
+            height: $teamplayerDescriptionHeight;
+            top: calc($teamplayerDescriptionTop - $teamplayerTitleTop);
+            font-family: 'Montserrat', sans-serif;
+            font-weight: 400;
+            font-style: normal;
+            font-size: 32px;
+            line-height: 141%;
+            text-align: center;
+        }
     }
 
     >.teamPlayerContent {
