--- a/src/app/contact/contact.html
+++ b/src/app/contact/contact.html
@@ -1,7 +1,8 @@
+<div #goToHeader></div>
 <div class="contact">
     <div class="ball11"></div>
     <div class="ball12"></div>
     <div class="ball13"></div>
-    <div class="ball14"></div>
+    <div class="ball14" (click)="goTo(goToHeader)"><img src="/ico/ArrowUpWhite.png" alt="Arrow Up White"></div>
 
 </div>
