f goTo in header added

--- a/src/app/contact/contact.html
+++ b/src/app/contact/contact.html
@@ -1,4 +1,4 @@
-<div #goToHeader></div>
+<div #goToHeader class="goToHeader"></div>
 <div class="contact">
     <div class="ball11"></div>
     <div class="ball12"></div>
