--- a/src/app/contact/contact.html
+++ b/src/app/contact/contact.html
@@ -5,4 +5,12 @@
     <div class="ball13"></div>
     <div class="ball14" (click)="goTo(goToHeader)"><img src="/ico/ArrowUpWhite.png" alt="Arrow Up White"></div>
 
+
+    <div class="contactContent">
+        <h2 class="title">{{myData.DATA.contact.title[myData.DATA.language]}}</h2>
+        <p class="ask">{{myData.DATA.contact.ask[myData.DATA.language]}}</p>
+        <p class="description">{{myData.DATA.contact.description[myData.DATA.language]}}</p>
+        <a class="button"
+            href="mailto:adam.piskorek@gmx.com">{{myData.DATA.contact.button[0][myData.DATA.language]}}{{myData.DATA.contact.button[1][myData.DATA.language]}}</a>
+    </div>
 </div>
