fonts for contact set

--- a/src/app/contact/contact.html
+++ b/src/app/contact/contact.html
@@ -10,7 +10,7 @@
         <h2 class="title">{{myData.DATA.contact.title[myData.DATA.language]}}</h2>
         <p class="ask">{{myData.DATA.contact.ask[myData.DATA.language]}}</p>
         <p class="description">{{myData.DATA.contact.description[myData.DATA.language]}}</p>
-        <a class="button"
-            href="mailto:adam.piskorek@gmx.com">{{myData.DATA.contact.button[0][myData.DATA.language]}}{{myData.DATA.contact.button[1][myData.DATA.language]}}</a>
+        <a class="contactMe"
+            href="mailto:adam.piskorek@gmx.com">{{myData.DATA.contact.contactMe[0][myData.DATA.language]}} <span>{{myData.DATA.contact.contactMe[1][myData.DATA.language]}}</span></a>
     </div>
 </div>
