--- a/src/app/contact/contact.scss
+++ b/src/app/contact/contact.scss
@@ -8,7 +8,7 @@ $topBall14: calc(6209px - $topBall );
 
 
 .contact {
-    border: 1px solid red;
+    //border: 1px solid red;
     position: absolute;
     box-sizing: border-box;
     max-width: 1440px;
@@ -18,7 +18,7 @@ $topBall14: calc(6209px - $topBall );
 }
 
 .contactContent {
-    border: 1px solid blue;
+    //border: 1px solid blue;
     position: absolute;
     box-sizing: border-box;
     max-width: 1241px;
@@ -30,7 +30,7 @@ $topBall14: calc(6209px - $topBall );
 
 
     .title {
-        border: 1px solid green;
+        //border: 1px solid green;
         position: absolute;
         box-sizing: border-box;
         width: 600px;
@@ -50,7 +50,7 @@ $topBall14: calc(6209px - $topBall );
     }
 
     .ask {
-        border: 1px solid green;
+        //border: 1px solid green;
         position: absolute;
         box-sizing: border-box;
         width: 600px;
@@ -69,7 +69,7 @@ $topBall14: calc(6209px - $topBall );
     }
 
     .description {
-        border: 1px solid green;
+        //border: 1px solid green;
         position: absolute;
         box-sizing: border-box;
         width: 600px;
@@ -88,7 +88,7 @@ $topBall14: calc(6209px - $topBall );
 
 
     .contactMe {
-        border: 1px solid green;
+        //border: 1px solid green;
         position: absolute;
         box-sizing: border-box;
         width: 600px;
