--- a/src/app/header/header.scss
+++ b/src/app/header/header.scss
@@ -36,8 +36,8 @@ header {
 
     >.logo {
         //border: 1px solid red;
-        width: 64px;
         height: 69px;
+        width: auto;
         color: white;
         background-color: transparent;
 
